fix page overflow and add version comments to js and css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Version 1.4 */
+
 * {
   box-sizing: border-box;
 }
@@ -47,7 +49,15 @@ nav > .nav-links > a {
   padding: 15px 12px;
   text-decoration: none;
   color: #efefef;
-  margin: 0 -6px;
+  margin: 0 -11px 0 0;
+}
+
+nav > .nav-links > a:last-child {
+  display: inline-block;
+  padding: 15px 12px;
+  text-decoration: none;
+  color: #efefef;
+  margin: 0;
 }
 
 nav > .nav-links > a:hover {
